--- a/WebApp9Soft/Views/Home/About.cshtml
+++ b/WebApp9Soft/Views/Home/About.cshtml
@@ -21,8 +21,7 @@
                     <div class="row">
                         <div class="col-lg-5 offset-lg-1">
                             <div class="modern-number-01 number-two">
-                                <h2 class="heading  mr-5"><span class="mark-text">38</span>Years’ Experience in IT</h2>
-                                <h5 class="heading mt-30">We’ve been triumphing all these <span class="text-color-primary"> 38 years. </span> Sacrifices are made up with success. </h5>
+                                <h5 class="heading mt-30"> <span class="text-color-primary">9Soft Solutions </span> Content </h5>
                             </div>
                         </div>
 
@@ -220,7 +219,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <!-- gallery-wrapper Start -->
                 <div class="gallery-wrapper section-space--pt_80 ">
                     <div class="row">
@@ -406,6 +405,10 @@
             </div>
         </div>
         <!--=========== fun fact Wrapper End ==========-->
+
+
+        @Html.Partial("pvTestimonialSection")
+
         <!--============ Contact Us Area Start =================-->
         <div class="contact-us-area appointment-contact-bg section-space--ptb_100">
             <div class="container">
@@ -453,7 +456,7 @@
                             <h6 class="heading font-weight--reguler">Reach out now!</h6>
                             <h3 class="call-us"><a href="tel:02134527965">021 34527965</a></h3>
                             <div class="text">Start the collaboration with us while figuring out the best solution based on your needs.</div>
-                          
+
                         </div>
                     </div>
                 </div>
