--- a/WebApp9Soft/Views/Home/Contact.cshtml
+++ b/WebApp9Soft/Views/Home/Contact.cshtml
@@ -85,43 +85,13 @@
             </div>
         </div>*@
         <!--====================  Conact us info End  ====================-->
-
         <!--====================  Map start  ====================-->
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14479.353435723538!2d67.08220445!3d24.8693697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3f2a67c5c9394c60!2sAnum%20blessing!5e0!3m2!1sen!2s!4v1602497062150!5m2!1sen!2s" style="width:100%;border:0;" height="400" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
         <!--========== Map End ============-->
 
-        <!--========== Call to Action Area Start ============-->
-        <div class="contact-us-section-wrappaer processing-contact-us-bg section-space--ptb_120">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 col-lg-6">
-                        <div class="conact-us-wrap-one">
-                            <h3 class="heading text-white">Obtaining further information by make a contact with our experienced IT staffs. </h3>
-
-                            <div class="sub-heading text-white">We’re available for 8 hours a day!<br>Contact to require a detailed analysis and assessment of your plan.</div>
-
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-lg-6">
-                        <div class="contact-info-two text-center">
-                            <div class="icon">
-                                <span class="fal fa-phone"></span>
-                            </div>
-                            <h6 class="heading font-weight--reguler">Reach out now!</h6>
-                            <h2 class="call-us"><a href="tel:02134527965">02134527965</a></h2>
-                            @*<div class="contact-us-button mt-20">
-                                <a href="#" class="btn btn--secondary">Contact us</a>
-                            </div>*@
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--========== Call to Action Area End ============-->
-
+        @Html.Partial("pvConactusSection")
 
 
 
