--- a/WebApp9Soft/Views/Home/Index.cshtml
+++ b/WebApp9Soft/Views/Home/Index.cshtml
@@ -149,7 +149,6 @@
             <div class="row">
                 <div class="col-lg-4 offset-lg-1">
                     <div class="modern-number-01 mr-5">
-                        <h2 class="heading"><span class="mark-text">38</span>Years’ Experience in IT</h2>
                         <h3 class="heading">Learn more about our <span class="text-color-primary">Success Stories</span></h3>
                     </div>
                 </div>
@@ -342,172 +341,20 @@
                                 </div>
                                 <!-- ht-box-icon End -->
                             </div>
-                         
-                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     <!--===========  feature-icon-wrapper  End =============-->
-    <!--====================  Conact us Section Start ====================-->
-    <div class="contact-us-section-wrappaer processing-contact-us-bg section-space--ptb_120">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-lg-6">
-                    <div class="conact-us-wrap-one">
-                        <h3 class="heading text-white">Obtaining further information by make a contact with our experienced IT staffs. </h3>
 
-                        <div class="sub-heading text-white">We’re available for 7 / 24 a day!<br>Contact to require a detailed analysis and assessment of your plan.</div>
+    @Html.Partial("pvConactusSection")
 
-                    </div>
-                </div>
 
-                <div class="col-lg-6 col-lg-6">
-                    <div class="contact-info-two text-center">
-                        <div class="icon">
-                            <span class="fal fa-phone"></span>
-                        </div>
-                        <h6 class="heading font-weight--reguler">Reach out now!</h6>
-                        <h2 class="call-us"><a href="tel:190068668">021 34527965</a></h2>
-                        <div class="contact-us-button mt-20">
-                            <a href="#" class="btn btn--secondary">Contact us</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--====================  Conact us Section End  ====================-->
-    <!--====================  testimonial section ====================-->
-    <div class="testimonial-slider-area bg-gray section-space--ptb_100">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title-wrap text-center section-space--mb_40">
-                        <h6 class="section-sub-title mb-20">Testimonials</h6>
-                        <h3 class="heading">What do people praise about <span class="text-color-primary"> 9Soft Solution ?</span></h3>
-                    </div>
-                    <div class="testimonial-slider">
-                        <div class="swiper-container testimonial-slider__container">
-                            <div class="swiper-wrapper testimonial-slider__wrapper">
-                                <div class="swiper-slide">
-                                    <div class="testimonial-slider__one wow move-up">
+    @Html.Partial("pvTestimonialSection")
 
-                                        <div class="testimonial-slider--info">
-                                            <div class="testimonial-slider__media">
-                                                <img src="~/assets/images/testimonial/mitech-testimonial-avata-02-90x90.jpg" class="img-fluid" alt="">
-                                            </div>
-
-                                            <div class="testimonial-slider__author">
-                                                <div class="testimonial-rating">
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                </div>
-                                                <div class="author-info">
-                                                    <h6 class="name">Abbie Ferguson</h6>
-                                                    <span class="designation">Marketing</span>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but 9Soft is one of the most impressive to me.</div>
-
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="testimonial-slider__one wow move-up">
-
-                                        <div class="testimonial-slider--info">
-                                            <div class="testimonial-slider__media">
-                                                <img src="~/assets/images/testimonial/mitech-testimonial-avata-03-90x90.jpg" class="img-fluid" alt="">
-                                            </div>
-
-                                            <div class="testimonial-slider__author">
-                                                <div class="testimonial-rating">
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                </div>
-                                                <div class="author-info">
-                                                    <h6 class="name">Monica Blews</h6>
-                                                    <span class="designation">Web designer</span>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but 9Soft Solution is one of the most impressive to me.</div>
-
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="testimonial-slider__one wow move-up">
-
-                                        <div class="testimonial-slider--info">
-                                            <div class="testimonial-slider__media">
-                                                <img src="~/assets/images/testimonial/mitech-testimonial-avata-04-90x90.jpg" class="img-fluid" alt="">
-                                            </div>
-
-                                            <div class="testimonial-slider__author">
-                                                <div class="testimonial-rating">
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                </div>
-                                                <div class="author-info">
-                                                    <h6 class="name">Abbie Ferguson</h6>
-                                                    <span class="designation">WEB DESIGNER</span>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but 9Soft Solution  is one of the most impressive to me.</div>
-
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="testimonial-slider__one wow move-up">
-
-                                        <div class="testimonial-slider--info">
-                                            <div class="testimonial-slider__media">
-                                                <img src="~/assets/images/testimonial/mitech-testimonial-avata-01-90x90.jpg" class="img-fluid" alt="">
-                                            </div>
-
-                                            <div class="testimonial-slider__author">
-                                                <div class="testimonial-rating">
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
-                                                </div>
-                                                <div class="author-info">
-                                                    <h6 class="name">Abbie Ferguson</h6>
-                                                    <span class="designation">WEB DESIGNER</span>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but 9Soft is one of the most impressive to me.</div>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-pagination swiper-pagination-t01 section-space--mt_30"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--====================  End of testimonial section  ====================-->
     <!--===========  feature-icon-wrapper  Start =============-->
     <div class="feature-icon-wrapper section-space--ptb_80 border-bottom">
         <div class="container">
@@ -726,3 +573,5 @@
     <!--====================  End of brand logo slider area  ====================-->
 
 </div>
+
+
