--- a/WebApp9Soft/Views/Shared/_Layout.cshtml
+++ b/WebApp9Soft/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <!-- Favicon -->
-    <link rel="icon" href="~/assets/images/favicon.png">
+    <link rel="icon" href="~/assets/images/favicon.ico">
 
     <!-- CSS
         ============================================ -->
