--- a/WebApp9Soft/Views/Home/About.cshtml
+++ b/WebApp9Soft/Views/Home/About.cshtml
@@ -42,7 +42,22 @@
 
                                         <div id="collapseOne" class="show" aria-labelledby="headingOne" data-parent="#accordion">
                                             <div class="card-body">
-                                                <p>Through the collaboration with customers in discussing needs and demand, we're able to attain mutual understanding, gain customer trust to offer appropriate advice, and bring about suggestions on suitable technology to transform your business. </p>
+                                                <p>
+                                                    9Soft Solution is passionate to support our partners and clients in their
+                                                    business, and to work together successfully. We aim to expand our
+                                                    business horizons so that we not only provide high-quality services to a
+                                                    large base of clients, but also help budding entrepreneurs set up their
+                                                    businesses and then help them expand.
+                                                    Our strength has always been that we have successfully helped
+                                                    hundreds of clients launch their businesses, and also assisted them in
+                                                    establishing their brands in International and Domestic market. Our
+                                                    customized solutions have always helped in getting the best out of
+                                                    market conditions.
+                                                    We are affectionate about your business and its sustained growth. we
+                                                    aim to actively engage our patrons with transparent and credible
+                                                    support, along with continuous value addition.
+
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
@@ -59,7 +74,16 @@
                                         </div>
                                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                             <div class="card-body">
-                                                <p>9Soft Solutions takes into consideration every little detail to make sure the system run smoothly and responsively. 9Soft Solutions employs a new technique called Minified Technology for securing customers' database & building up highly confidential firewalls. </p>
+                                                <p>
+                                                    We only produce and show our clients the admirable effective work
+                                                    potential strategies and we belief our clients are our greatest assets,
+                                                    strength. We aim to treat very consumer well for some; however, we
+                                                    constantly strive for the exceptional. Collaboration and faith is king in this
+                                                    office, in order that “YOUR TRUST IS OUR ASSET” so bring your
+                                                    relational skills “A-Trade.” We actively think about the next version of
+                                                    everything. It’s what keeps our work fresh. Together, we face difficulty
+                                                    and uncertainty without fear, It’s how innovation happens.
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
@@ -76,8 +100,16 @@
                                         </div>
                                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                                             <div class="card-body">
-                                                <p>We reduce redundant complex calculations and lengthy erroneous code texts with simpler ones to ensure 9Soft Solutions would run seamlessly and the design is reserved in its best form when viewed from a wide range of mobile devices & browsers. </p>
-                                            </div>
+                                                <p>
+                                                    Eventually to a rise in the automation of practices in every field of life from
+                                                    business to education the need of specialized software development
+                                                    companies has also been increased. 9Soft solution was developed with the
+                                                    mission to provide the high-quality software and application to make life easy
+                                                    by providing the true value of your money. We are the best software house in
+                                                    Pakistan with highly motivated and professional team and best software
+                                                    development services.
+                                                    </p>
+</div>
                                         </div>
                                     </div>
                                 </div>
