--- a/WebApp9Soft/Views/Home/pvTestimonialSection.cshtml
+++ b/WebApp9Soft/Views/Home/pvTestimonialSection.cshtml
@@ -26,8 +26,8 @@
                                                 <span class="fa fa-star"></span>
                                             </div>
                                             <div class="author-info">
-                                                <h6 class="name">Abbie Ferguson</h6>
-                                                <span class="designation">Marketing</span>
+                                                <h6 class="name">Jamal Khan</h6>
+                                                
                                             </div>
                                         </div>
                                     </div>
@@ -55,8 +55,7 @@
                                                 <span class="fa fa-star"></span>
                                             </div>
                                             <div class="author-info">
-                                                <h6 class="name">Monica Blews</h6>
-                                                <span class="designation">Web designer</span>
+                                                <h6 class="name">Minahil</h6>
                                             </div>
                                         </div>
                                     </div>
@@ -84,8 +83,7 @@
                                                 <span class="fa fa-star"></span>
                                             </div>
                                             <div class="author-info">
-                                                <h6 class="name">Abbie Ferguson</h6>
-                                                <span class="designation">WEB DESIGNER</span>
+                                                <h6 class="name">Kamal khan</h6>
                                             </div>
                                         </div>
                                     </div>
@@ -112,8 +110,7 @@
                                                 <span class="fa fa-star"></span>
                                             </div>
                                             <div class="author-info">
-                                                <h6 class="name">Abbie Ferguson</h6>
-                                                <span class="designation">WEB DESIGNER</span>
+                                                <h6 class="name">Ali Hussain</h6>
                                             </div>
                                         </div>
                                     </div>
