--- a/WebApp9Soft/Views/Services/GraphicsDetail.cshtml
+++ b/WebApp9Soft/Views/Services/GraphicsDetail.cshtml
@@ -21,8 +21,7 @@
                                 <h5 class="heading ">9Soft Technologies specializes in <span class="text-color-primary"> technological and IT-related services</span> such as product engineering, warranty management, building cloud, infrastructure, network, etc. </h5>
 
                                 <div class="sub-heading">
-                                    Our creative team combines quality creative aesthetics with strong web applications and search engine friendly development. In today’s highly competitive environment where everyone owns a website, it would be suicidal for you losing customers with poor and low quality web design.
-                                    Even a best design in universe won’t help you if no one can find you. Our full spectrum creative and innovative marketing services includes a search engines friendly websites with user-friendly content management system.
+                                    Graphic design is a craft where professionals create visual content to communicate messages. By applying visual hierarchy and page layout techniques, designers use typography and pictures to meet users' specific needs and focus on the logic of displaying elements in interactive designs, to optimize the user experience.
                                 </div>
                             </div>
                         </div>
