--- a/WebApp9Soft/Views/Services/Index.cshtml
+++ b/WebApp9Soft/Views/Services/Index.cshtml
@@ -60,7 +60,7 @@
                                         <div class="content">
                                             <h5 class="heading">Graphics Design</h5>
                                             <div class="text">
-                                                We provide the most responsive and functional IT design for companies and businesses worldwide.
+                                                Create visual concepts to communicate ideas that inspire, inform, and captivate consumers. Develop the overall layout and production design for applications such as advertisements, brochures, magazines, and reports.
                                             </div>
                                             <div class="circle-arrow">
                                                 <div class="middle-dot"></div>
