--- a/WebApp9Soft/Views/Shared/_Layout.cshtml
+++ b/WebApp9Soft/Views/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
     <link rel="stylesheet" href="~/assets/css/style.css">
     <link rel="stylesheet" href="~/assets/css/custom.css">
 
-    
+
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
+    <script src="~/assets/js/custom.js"></script>
+
 </head>
 
 <body>
@@ -247,7 +250,7 @@
                     <ul class="list ht-social-networks solid-rounded-icon">
 
                         <li class="item">
-                            <a href="https://twitter.com/" target="_blank" aria-label="Twitter" class="social-link hint--bounce hint--top hint--primary">
+                            <a href="https://twitter.com/9SoftSolutions1" target="_blank" aria-label="Twitter" class="social-link hint--bounce hint--top hint--primary">
                                 <i class="fab fa-twitter link-icon"></i>
                             </a>
                         </li>
@@ -257,15 +260,15 @@
                             </a>
                         </li>
                         <li class="item">
-                            <a href="https://instagram.com/" target="_blank" aria-label="Instagram" class="social-link hint--bounce hint--top hint--primary">
+                            <a href="https://www.instagram.com/9soft_solutions" target="_blank" aria-label="Instagram" class="social-link hint--bounce hint--top hint--primary">
                                 <i class="fab fa-instagram link-icon"></i>
                             </a>
                         </li>
-                        <li class="item">
+                        @*<li class="item">
                             <a href="https://linkedin.com/" target="_blank" aria-label="Linkedin" class="social-link hint--bounce hint--top hint--primary">
                                 <i class="fab fa-linkedin link-icon"></i>
                             </a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
