--- a/WebApp9Soft/assets/css/custom.css
+++ b/WebApp9Soft/assets/css/custom.css
@@ -1,10 +1,16 @@
-﻿.ht-box-images.style-01 .image-box-wrap {
+﻿/*loader control start*/
+.notLoad {
+    display: none;
+}
+/*loader control end*/
+
+
+.ht-box-images.style-01 .image-box-wrap {
     height: 420px;
 }
 
-
-
-.ht-box-images .content .text, .feature-list__one .icon-box-wrap .text {
+/*limits content*/
+.ht-box-images .content .text, .feature-list__one .icon-box-wrap .text, testimonial-slider__text {
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
@@ -14,9 +20,12 @@
     height: 360px;
 }
 
+.testimonial-slider__one {
+    height: 270px;
+}
 
-.breadcrumb-title{
-    color:#fff;
+.breadcrumb-title {
+    color: #fff;
 }
 .breadcrumb-item {
     color: #333333;
@@ -24,4 +33,10 @@
 
 .breadcrumb-list li.active {
     color: #fff;
+}
+
+@media (max-width: 992px) {
+    .testimonial-slider__one {
+        height: auto!important;
+    }
 }
