--- a/WebApp9Soft/assets/css/custom.css
+++ b/WebApp9Soft/assets/css/custom.css
@@ -35,6 +35,13 @@
     color: #fff;
 }
 
+.serviceDetailBanner img {
+    width: 100%;
+}
+
+
+
+
 @media (max-width: 992px) {
     .testimonial-slider__one {
         height: auto!important;
