--- a/WebApp9Soft/Views/Home/About.cshtml
+++ b/WebApp9Soft/Views/Home/About.cshtml
@@ -48,16 +48,18 @@
                                                     business horizons so that we not only provide high-quality services to a
                                                     large base of clients, but also help budding entrepreneurs set up their
                                                     businesses and then help them expand.
-                                                    Our strength has always been that we have successfully helped
+                                                </p>
+                                                    @*Our strength has always been that we have successfully helped
                                                     hundreds of clients launch their businesses, and also assisted them in
                                                     establishing their brands in International and Domestic market. Our
                                                     customized solutions have always helped in getting the best out of
-                                                    market conditions.
+                                                    market conditions.*@
+                                                <p>
                                                     We are affectionate about your business and its sustained growth. we
                                                     aim to actively engage our patrons with transparent and credible
                                                     support, along with continuous value addition.
-
                                                 </p>
+
                                             </div>
                                         </div>
                                     </div>
@@ -237,19 +239,20 @@
         <div class="gallery-section section-space--pt_100">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
+                    <div class="col-lg-12">
                         <div class="section-title-wrap text-left">
-                            <h3 class="section-title mb-15 wow move-up">Bright future that we <span class="text-color-primary"> cherish. </span> We thrive for <span class="text-color-primary">  success.</span></h3>
-                            <div class="contact-button section-space--mt_30 wow move-up">
+                            <h3 class="section-title mb-15 wow move-up">Bright future that we <span class="text-color-primary"> cherish. </span></h3>
+                            <h3 class="section-title mb-15 wow move-up"> We thrive for <span class="text-color-primary">  success.</span></h3>
+                            @*<div class="contact-button section-space--mt_30 wow move-up">
                                 <a href="#" class="hover-style-link">View all team <i class="far fa-long-arrow-right"></i></a>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
-                    <div class="col-lg-5 wow move-up animate">
+                    @*<div class="col-lg-5 wow move-up animate">
                         <div class="about-button mt-30">
                             <a href="#" class="ht-btn ht-btn-md">Join us</a>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
 
                 <!-- gallery-wrapper Start -->
