--- a/WebApp9Soft/Views/Services/DigitalMarketingDetail.cshtml
+++ b/WebApp9Soft/Views/Services/DigitalMarketingDetail.cshtml
@@ -1,11 +1,16 @@
 ﻿
 @{
-    ViewBag.Title = "WebDevDetail";
+    ViewBag.Title = "Digital Marketing Services";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
     <div class="site-wrapper-reveal">
-        
+
+        <!--===========  banner  Start =============-->
+        <div class="serviceDetailBanner section-space--ptb_120" style="background-image: url('../../assets/images/banner(new)/Digital Marketing & Social Media Management.jpg');">
+
+        </div>
+        <!--===========  banner  end =============-->
         <!--===========  feature-large-images-wrapper  Start =============-->
         <div class="feature-large-images-wrapper section-space--ptb_100">
             <div class="container">
@@ -128,7 +133,6 @@
             </div>
         </div>
         <!--===========  feature-icon-wrapper  End =============-->
-       
         <!--========== Call to Action Area Start ============-->
         <div class="cta-image-area_one section-space--ptb_80 cta-bg-image_one">
             <div class="container">
