--- a/WebApp9Soft/Views/Services/WebDevDetail.cshtml
+++ b/WebApp9Soft/Views/Services/WebDevDetail.cshtml
@@ -1,11 +1,17 @@
 ﻿
 @{
-    ViewBag.Title = "WebDevDetail";
+    ViewBag.Title = "Website Design And Development Services";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
     <div class="site-wrapper-reveal">
-        
+
+        <!--===========  banner  Start =============-->
+
+        <div class="serviceDetailBanner">
+            <img src="../assets/images/banner(new)/web design banner.jpg">
+        </div>
+        <!--===========  banner  end =============-->
         <!--===========  feature-large-images-wrapper  Start =============-->
         <div class="feature-large-images-wrapper section-space--ptb_100">
             <div class="container">
@@ -129,7 +135,6 @@
             </div>
         </div>
         <!--===========  feature-icon-wrapper  End =============-->
-       
         <!--========== Call to Action Area Start ============-->
         <div class="cta-image-area_one section-space--ptb_80 cta-bg-image_one">
             <div class="container">
