--- a/WebApp9Soft/Views/Services/WebHostingDetail.cshtml
+++ b/WebApp9Soft/Views/Services/WebHostingDetail.cshtml
@@ -1,11 +1,16 @@
 ﻿
 @{
-    ViewBag.Title = "WebDevelopment";
+    ViewBag.Title = "Web Hosting Services";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
     <div class="site-wrapper-reveal">
-        
+
+        <!--===========  banner  Start =============-->
+        <div class="serviceDetailBanner">
+            <img src="../assets/images/banner(new)/web hosting.jpg">
+        </div>
+        <!--===========  banner  end =============-->
         <!--===========  feature-large-images-wrapper  Start =============-->
         <div class="feature-large-images-wrapper section-space--ptb_100">
             <div class="container">
@@ -21,9 +26,9 @@
                                 <h5 class="heading ">9Soft Technologies specializes in <span class="text-color-primary"> technological and IT-related services</span> such as product engineering, warranty management, building cloud, infrastructure, network, etc. </h5>
 
                                 <div class="sub-heading">
-                                   9Soft Solution has revolutionized web hosting with its quality of services and packages. Regardless of the size of your business, we offers variety of web hosting plans to cater your hosting needs/demands.
+                                    9Soft Solution has revolutionized web hosting with its quality of services and packages. Regardless of the size of your business, we offers variety of web hosting plans to cater your hosting needs/demands.
 
-9Soft Solution provides offers wide range of hosting options like shared server, dedicated server, VPS and much more.
+                                    9Soft Solution provides offers wide range of hosting options like shared server, dedicated server, VPS and much more.
 
                                 </div>
                             </div>
@@ -131,7 +136,6 @@
             </div>
         </div>
         <!--===========  feature-icon-wrapper  End =============-->
-       
         <!--========== Call to Action Area Start ============-->
         <div class="cta-image-area_one section-space--ptb_80 cta-bg-image_one">
             <div class="container">
