--- a/WebApp9Soft/Views/Services/Index.cshtml
+++ b/WebApp9Soft/Views/Services/Index.cshtml
@@ -55,7 +55,7 @@
                                 <div class="ht-box-images style-01">
                                     <div class="image-box-wrap">
                                         <div class="box-image">
-                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/Graphics.png" alt=""  style="height:108px;">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/Graphics.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">Graphics Design</h5>
@@ -208,25 +208,7 @@
         </div>
     </div>
     <!--===========  feature-images-wrapper  End =============-->
-    <!--========== Call to Action Area Start ============-->
-    <div class="cta-image-area_one section-space--ptb_80 cta-bg-image_one">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-xl-8 col-lg-7">
-                    <div class="cta-content md-text-center">
-                        <h3 class="heading text-white">We run all kinds of IT services that vow your <span class="text-color-secondary"> success</span></h3>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-5">
-                    <div class="cta-button-group--one text-center">
-                        <a href="@Url.Action("Contact","Home")" class="btn btn--white btn-one"><span class="btn-icon mr-2"><i class="far fa-comment-alt-dots"></i></span> Let's talk</a>
-                        <a href="@Url.Action("About","Home")" class="btn btn--secondary  btn-two"><span class="btn-icon mr-2"><i class="far fa-info-circle"></i></span> Get info</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--========== Call to Action Area End ============-->
 
+    @Html.Partial("pvLetsTalkSection","Home")
 </div>
 
