meta Double check

--- a/WebApp9Soft/Views/Services/GraphicsDetail.cshtml
+++ b/WebApp9Soft/Views/Services/GraphicsDetail.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = " Graphics Design Services";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.keywords = "Graphic Designing in Pakistan,Graphics,Creative Design";
-    ViewBag.description = "Working on all kinds of Graphics Designing including Posters, brochures, etc. for Personal, Religious, Political and Formal Events & Online Post Maker";
+    ViewBag.description = "9Soft solution provides you creative Graphics Designing services for startup or enterprise businesses.";
 }
 
     <div class="site-wrapper-reveal">
