--- a/WebApp9Soft/Views/Services/Index.cshtml
+++ b/WebApp9Soft/Views/Services/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Index";
     ViewBag.keywords = "Software services in pakistan,software services,9Soft Solution Services";
-    ViewBag.description = "9Soft Solution offers software services like website(design, development,  hosting), eCommerce Solutions, graphics, software development, SEO,  etc.";
+    ViewBag.description = "9Soft Solution offers software services like website(design, development, & hosting), eCommerce Solutions, graphics, software development, SEO,  etc.";
 }
 
 
